<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课本价格计算器</string>
    <string name="about_title">课本价格计算器V1.6</string>
    <string name="feedback_subject">关于课本价格计算器V1.6的一些建议</string>
    <string name="feedback_text">你好！关于这个版本的课本价格计算器，我有下面一些想法和建议：</string>
    <string name="mailto">mailto:wjw_wwasd@qq.com</string>
    <string name="hello_world">>>点击此处可进行复位&lt;&lt;</string>
    <string name="reset_complete">--- 金额已重置 ---</string>
    <string name="action_about">关于本应用</string>
    <string name="action_feedback">有什么建议?</string>
    <string name="action_theme">切换主题</string>
    <string name="btn_price">&gt;&gt;点击这里修改课本的价格&lt;&lt;</string>
    <string name="checking_title">提示：点击底部总金额可进行复位</string>
    <string name="AOR_reset">复位</string>
    <string name="AOR_check_all">全选</string>
    <string name="main_set_price">设定课本价格</string>
    <string name="main_pick_books">选择购买课本</string>
    <string name="dialog_current_color">当前主题颜色</string>
    <string name="dialog_chosen_color">设定主题颜色</string>
    <string name="dialog_positive">确认变更</string>
    <string name="dialog_negative">取消变更</string>
    <string name="pref_default_cost">0.0</string>
    <string name="set_the_cost1">设定课本1的价格</string>
    <string name="set_the_cost2">设定课本2的价格</string>
    <string name="set_the_cost3">设定课本3的价格</string>
    <string name="set_the_cost4">设定课本4的价格</string>
    <string name="set_the_cost5">设定课本5的价格</string>
    <string name="set_the_cost6">设定课本6的价格</string>
    <string name="set_the_cost7">设定课本7的价格</string>
    <string name="set_the_cost8">设定课本8的价格</string>
    <string name="set_the_cost9">设定课本9的价格</string>
    <string name="set_the_cost10">设定课本10的价格</string>
    <string name="set_the_cost11">设定课本11的价格</string>
    <string name="set_the_cost12">设定课本12的价格</string>
    <string name="set_the_cost13">设定课本13的价格</string>
    <string name="set_the_cost14">设定课本14的价格</string>
    <string name="set_the_cost15">设定课本15的价格</string>
    <string name="set_the_cost16">设定课本16的价格</string>
    <string name="set_the_cost17">设定课本17的价格</string>
    <string name="set_the_cost18">设定课本18的价格</string>
    <string name="set_the_cost19">设定课本19的价格</string>
    <string name="set_the_cost20">设定课本20的价格</string>
    <string name="book1">课本1</string>
    <string name="book2">课本2</string>
    <string name="book3">课本3</string>
    <string name="book4">课本4</string>
    <string name="book5">课本5</string>
    <string name="book6">课本6</string>
    <string name="book7">课本7</string>
    <string name="book8">课本8</string>
    <string name="book9">课本9</string>
    <string name="book10">课本10</string>
    <string name="book11">课本11</string>
    <string name="book12">课本12</string>
    <string name="book13">课本13</string>
    <string name="book14">课本14</string>
    <string name="book15">课本15</string>
    <string name="book16">课本16</string>
    <string name="book17">课本17</string>
    <string name="book18">课本18</string>
    <string name="book19">课本19</string>
    <string name="book20">课本20</string>

</resources>
