<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="book_cost_1"
        android:title="@string/set_the_cost1"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_2"
        android:title="@string/set_the_cost2"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_3"
        android:title="@string/set_the_cost3"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_4"
        android:title="@string/set_the_cost4"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_5"
        android:title="@string/set_the_cost5"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_6"
        android:title="@string/set_the_cost6"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_7"
        android:title="@string/set_the_cost7"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_8"
        android:title="@string/set_the_cost8"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_9"
        android:title="@string/set_the_cost9"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_10"
        android:title="@string/set_the_cost10"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

    <EditTextPreference
        android:key="book_cost_11"
        android:title="@string/set_the_cost11"
        android:defaultValue="@string/pref_default_cost"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        />

</PreferenceScreen>